--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,28 @@ image/data/
 image/cache/
 system/cache/
 system/logs/
+
+
+
+.dwsync.xml*
+_notes*
+_notes/*
+dwsync.xml*
+/dwsync.xml*
+/dwsync.xml
+assets/css/_notes/dwsync.xml
+assets/css/_notes/dwsync.xml*
+/assets/css/_notes/dwsync.xml*
+/assets/css/_notes/dwsync.xml
+/_notes*
+/_notes/
+/_notes*
+.htaccess
+.htaccess.sample
+
+
+
+
+assets/css/_notes/dwsync.xml
+
+assets/css/_notes/dwsync.xml
